add swiftui talk

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 </li>
             </ul><ul class="works work-generals">
                 <li data-name="gogopet">
-                        <h4>Gogo PET</h4>
+                        <h4>Gogo PET <span class="discontinued">Discontinued</span></h4>
                         <a href="https://www.findingdog.com.tw" target="_blank">https://www.findingdog.com.tw</a>
                         <span class="case">case</span>
                         <span class="web">web</span>
@@ -591,11 +591,18 @@
             </ul>
             <h3>Talks</h3>
             <ul class="works work-generals">
-                <li data-name="swifttalk-201612">
+                <li data-name="swifttalk-201911">
+                    <h4>MVVM with SwiftUI and Combine</h4>
+                    <p>
+                        2019.11.15, Apple Inc. TW <br />
+                        <a href="https://user230.psee.io/LG3RU" target="_blank">https://user230.psee.io/LG3RU</a>
+                        <span class="ios">iOS</span>
+                    </p>
+                </li><li data-name="swifttalk-201612">
                     <h4>Build Your Own Swift JSONModel</h4>
                     <p>
                         2016.12.23, Apple Inc. TW <br />
-                        <a href="https://pics.ee/swifttalk-201612" target="_blank">pics.ee/swifttalk-201612</a>
+                        <a href="https://pics.ee/swifttalk-201612" target="_blank">https://pics.ee/swifttalk-201612</a>
                         <span class="ios">iOS</span>
                     </p>
                 </li><li data-name="iaastalk">
