add bacon web app

--- a/index.html
+++ b/index.html
@@ -233,7 +233,14 @@
                     </p>
                 </li>
             </ul><ul class="works work-generals">
-                <li data-name="gogopet">
+                <li data-name="bacondaily">
+                    <h4>Bacon培根日薪</h4>
+                    <a href="https://app.bacondaily.com" target="_blank">https://app.bacondaily.com</a>
+                    <span class="case">case</span>
+                    <span class="web">web</span>
+                    <span class="nodejs">Node.js</span>
+                    <span class="react">React.js</span>
+                </li><li data-name="gogopet">
                         <h4>Gogo PET <span class="discontinued">Discontinued</span></h4>
                         <a href="https://www.findingdog.com.tw" target="_blank">https://www.findingdog.com.tw</a>
                         <span class="case">case</span>
