fix script; update indents

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <p>Programmer, Software Engineer, Gunpla Builder</p>
       <h3>Gunpla Works</h3>
       <ul>
+        <li><a href="https://photos.app.goo.gl/QyH3XZt13tMfLZvD6" target="_blank">Graze Hornisse (2020)</a></li>
         <li><a href="https://photos.app.goo.gl/1e5qC9ZMqpHZaGKP6" target="_blank">TR-6 Woundwort [Orbital] (2019)</a></li>
         <li><a href="https://photos.app.goo.gl/g6G3hUcCZh7Uigk57" target="_blank">Almighty Zeta Gundam (2018)</a></li>
         <li><a href="https://photos.app.goo.gl/rVCEboHfXRaNnvtq5" target="_blank">Coffin Spear (2017)</a></li>
@@ -156,35 +157,35 @@
       </header>
       <span class="select">
         <select id="sel-work" onchange="filterWork()">
-          <option value="">All</option>
-          <option value="web">web</option>
-          <option value="nodejs">Node.js</option>
-          <option value="ntu">NTU</option>
-          <option value="startup">startup</option>
-          <option value="angular">Angular.js</option>
-          <option value="react">React.js</option>
-          <option value="rn">React Native</option>
-          <option value="vue">Vue.js</option>
-          <option value="yahoo">Yahoo</option>
-          <option value="ios">iOS</option>
-          <option value="private">private</option>
-          <option value="case">case</option>
-          <option value="android">Android</option>
-          <option value="hackday">hackday</option>
-          <option value="game">game</option>
-          <option value="ar">AR</option>
-          <option value="java">Java</option>
-          <option value="ror">RoR</option>
-          <option value="php">PHP</option>
-          <option value="cuda">CUDA</option>
-          <option value="matlab">MATLAB</option>
-          <option value="support">support</option>
-          <option value="golang">Golang</option>
-          <option value="kubernetes">Kubernetes</option>
+          <option value="all" label="All">All</option>
+          <option value="web" label="web">web</option>
+          <option value="nodejs" label="Node.js">Node.js</option>
+          <option value="ntu" label="NTU">NTU</option>
+          <option value="startup" label="startup">startup</option>
+          <option value="angular" label="Angular.js">Angular.js</option>
+          <option value="react" label="React.js">React.js</option>
+          <option value="rn">React label="Native" Native</option>
+          <option value="vue" label="Vue.js">Vue.js</option>
+          <option value="yahoo" label="Yahoo">Yahoo</option>
+          <option value="ios" label="iOS">iOS</option>
+          <option value="private" label="private">private</option>
+          <option value="case" label="case">case</option>
+          <option value="android" label="Android">Android</option>
+          <option value="hackday" label="hackday">hackday</option>
+          <option value="game" label="game">game</option>
+          <option value="ar" label="AR">AR</option>
+          <option value="java" label="Java">Java</option>
+          <option value="ror" label="RoR">RoR</option>
+          <option value="php" label="PHP">PHP</option>
+          <option value="cuda" label="CUDA">CUDA</option>
+          <option value="matlab" label="MATLAB">MATLAB</option>
+          <option value="support" label="support">support</option>
+          <option value="golang" label="Golang">Golang</option>
+          <option value="kubernetes" label="Kubernetes">Kubernetes</option>
         </select>
       </span>
       <ul class="works work-highlights">
-        <li data-name="thesis">
+        <li class="work" data-name="thesis">
           <h4>Migratom.js: A JavaScript Migration Framework for Distributed Web Computing and Mobile Devices</h4>
           <p>
             2013.08 - 2014.09 <br />
@@ -193,7 +194,7 @@
             <span class="nodejs">Node.js</span>
             <span class="ntu">NTU</span>
           </p>
-        </li><li data-name="himelight">
+        </li><li class="work" data-name="himelight">
           <h4>Himelight</h4>
           <p>
             2014.09 - 2016.02 <br />
@@ -204,7 +205,7 @@
             <span class="angular">Angular.js</span>
             <span class="react">React.js</span>
           </p>
-        </li><li data-name="yoola">
+        </li><li class="work" data-name="yoola">
           <h4>RadioFlux Yoola</h4>
           <p>
             2016.06 - Present <br />
@@ -222,7 +223,7 @@
             <span class="game">game</span>
             <span class="flutter">flutter</span>
           </p>
-        </li><li data-name="uww">
+        </li><li class="work" data-name="uww">
           <h4>Yahoo! U Want Wall <span class="discontinued">Discontinued</span></h4>
           <p>
             2012.11 - 2013.04 <br />
@@ -233,21 +234,21 @@
           </p>
         </li>
       </ul><ul class="works work-generals">
-        <li data-name="bacondaily">
+        <li class="work" data-name="bacondaily">
           <h4>Bacon培根日薪</h4>
           <a href="https://app.bacondaily.com" target="_blank">https://app.bacondaily.com</a>
           <span class="case">case</span>
           <span class="web">web</span>
           <span class="nodejs">Node.js</span>
           <span class="react">React.js</span>
-        </li><li data-name="gogopet">
+        </li><li class="work" data-name="gogopet">
           <h4>Gogo PET <span class="discontinued">Discontinued</span></h4>
           <!-- <a href="https://www.findingdog.com.tw" target="_blank">https://www.findingdog.com.tw</a> -->
           <span class="case">case</span>
           <span class="web">web</span>
           <span class="nodejs">Node.js</span>
           <span class="react">React.js</span>
-        </li><li data-name="keylessok">
+        </li><li class="work" data-name="keylessok">
           <h4>KeylessOK App</h4>
           <a href="http://tavis888.wixsite.com/keylessok" target="_blank">http://tavis888.wixsite.com/keylessok</a>
           <span class="private">private</span>
@@ -258,28 +259,28 @@
           <span class="java">Java</span>
           <span class="web">web</span>
           <span class="nodejs">Node.js</span>
-        </li><li data-name="ostle-flutter">
+        </li><li class="work" data-name="ostle-flutter">
           <h4>Ostle Flutter</h4>
           <p>
             <a href="https://github.com/teaualune/ostle_flutter" target="_blank">https://github.com/teaualune/ostle_flutter</a>
             <span class="flutter">flutter</span>
             <span class="game">game</span>
           </p>
-        </li><li data-name="display-name">
+        </li><li class="work" data-name="display-name">
           <h4>displayName</h4>
           <p>
             <a href="https://github.com/teaualune/displayName" target="_blank">https://github.com/teaualune/displayName</a>
             <span class="web">web</span>
             <span class="nodejs">Node.js</span>
           </p>
-        </li><li data-name="fbpjs">
+        </li><li class="work" data-name="fbpjs">
           <h4>FBP.js</h4>
           <p>
             <a href="https://github.com/teaualune/fbpjs" target="_blank">https://github.com/teaualune/fbpjs</a>
             <span class="web">web</span>
             <span class="ntu">NTU</span>
           </p>
-        </li><li data-name="warmie">
+        </li><li class="work" data-name="warmie">
           <h4>Warmie</h4>
           <p>
             <a href="https://play.google.com/store/apps/details?id=com.warmie.app" target="_blank">https://play.google.com/store/apps/details?id=com.warmie.app</a>
@@ -288,7 +289,7 @@
             <span class="case">case</span>
             <span class="support">support</span>
           </p>
-        </li><li data-name="glocalclick">
+        </li><li class="work" data-name="glocalclick">
           <h4>Glocal Click</h4>
           <p>
             <a href="https://glocalclick.com" target="_blank">https://glocalclick.com</a>
@@ -298,7 +299,7 @@
             <span class="case">case</span>
             <span class="support">support</span>
           </p>
-        </li><li data-name="merck">
+        </li><li class="work" data-name="merck">
           <h4>Merck One Page</h4>
           <p>
             2017.06 - 2017.12 <br />
@@ -307,7 +308,7 @@
             <span class="java">Java</span>
             <span class="case">case</span>
           </p>
-        </li><li data-name="manba">
+        </li><li class="work" data-name="manba">
           <h4>MANBA Website</h4>
           <p>
             2017.11 <br />
@@ -316,7 +317,7 @@
             <span class="case">case</span>
             <span class="support">support</span>
           </p>
-        </li><li data-name="ctw">
+        </li><li class="work" data-name="ctw">
           <h4>Catch The Wind: an Interactive Picture Book on iPad</h4>
           <p>
             2017.04 - 2017.05 <br />
@@ -325,7 +326,7 @@
             <span class="ar">AR</span>
             <span class="case">case</span>
           </p>
-        </li><li data-name="rakuten-cbct-2017">
+        </li><li class="work" data-name="rakuten-cbct-2017">
           <h4>Rakuten Taiwan &ndash; e-Ticket Website</h4>
           <p>
             2017.04 - 2017.06 <br />
@@ -336,12 +337,12 @@
             <span class="case">case</span>
             <span class="support">support</span>
           </p>
-        </li><li data-name="postcss9patch">
+        </li><li class="work" data-name="postcss9patch">
           <h4>PostCSS Border 9-patch Plugin</h4>
           <a href="https://github.com/teaualune/postcss-border-9-patch" target="_blank">https://github.com/teaualune/postcss-border-9-patch</a>
           <span class="web">web</span>
           <span class="nodejs">Node.js</span>
-        </li><li data-name="defiderm">
+        </li><li class="work" data-name="defiderm">
           <h4>Défiderm</h4>
           <a href="https://itunes.apple.com/tw/app/defiderm/id1160110332" target="_blank">https://itunes.apple.com/tw/app/defiderm/id1160110332</a>
           <p>
@@ -350,7 +351,7 @@
             <span class="case">case</span>
             <span class="support">support</span>
           </p>
-        </li><li data-name="tapit">
+        </li><li class="work" data-name="tapit">
           <h4>TapIt Beer App</h4>
           <p>
             2015.12 - 2016.01 <br />
@@ -362,7 +363,7 @@
             <span class="private">private</span>
             <span class="case">case</span>
           </p>
-        </li><li data-name="trampolinebomb">
+        </li><li class="work" data-name="trampolinebomb">
           <h4>Trampoline Bomb</h4>
           <p>
             2016.07 <br />
@@ -370,7 +371,7 @@
             <span class="ios">iOS</span>
             <span class="game">game</span>
           </p>
-        </li><li data-name="cardo">
+        </li><li class="work" data-name="cardo">
           <h4>CARDO Website</h4>
           <p>
             2015.08 - 2016.01 <br />
@@ -380,7 +381,7 @@
             <span class="react">React.js</span>
             <span class="case">case</span>
           </p>
-        </li><li data-name="asian-barometer">
+        </li><li class="work" data-name="asian-barometer">
           <h4>Asian Barometer Website</h4>
           <p>
             2015.07 - 2015.12 <br />
@@ -390,7 +391,7 @@
             <span class="ntu">NTU</span>
             <span class="case">case</span>
           </p>
-        </li><li data-name="ifindbook">
+        </li><li class="work" data-name="ifindbook">
           <h4>i找書</h4>
           <p>
             2015.06 - 2015.10 <br />
@@ -399,7 +400,7 @@
             <span class="java">Java</span>
             <span class="case">case</span>
           </p>
-        </li><li data-name="tec">
+        </li><li class="work" data-name="tec">
           <h4>Taidah Entreprenuership Center Website <span class="discontinued">Discontinued</span></h4>
           <p>
             2015.08 <br />
@@ -408,7 +409,7 @@
             <span class="nodejs">Node.js</span>
             <span class="case">case</span>
           </p>
-        </li><li data-name="global-barometer">
+        </li><li class="work" data-name="global-barometer">
           <h4>Global Barometer Website</h4>
           <p>
             2015.01 - 2015.06 <br />
@@ -418,7 +419,7 @@
             <span class="ntu">NTU</span>
             <span class="case">case</span>
           </p>
-        </li><li data-name="rakuten-react">
+        </li><li class="work" data-name="rakuten-react">
           <h4>Rakuten Taiwan &ndash; React Component Based CMS</h4>
           <p>
             2015.05 <br />
@@ -429,7 +430,7 @@
             <span class="case">case</span>
             <span class="support">support</span>
           </p>
-        </li><li data-name="hsa-tutorial-day">
+        </li><li class="work" data-name="hsa-tutorial-day">
           <h4>HSA Tutorial Day Website</h4>
           <p>
             2015.02 <br />
@@ -438,7 +439,7 @@
             <span class="ntu">NTU</span>
             <span class="case">case</span>
           </p>
-        </li><li data-name="unieco">
+        </li><li class="work" data-name="unieco">
           <h4>UniEco Website <span class="discontinued">Discontinued</span></h4>
           <p>
             2014.11 <br />
@@ -447,7 +448,7 @@
             <span class="nodejs">Node.js</span>
             <span class="case">case</span>
           </p>
-        </li><li data-name="tmu-international-scholarships">
+        </li><li class="work" data-name="tmu-international-scholarships">
           <h4>Scholarship Management System for Taipei Medical University (TMU) International Office</h4>
           <p>
             2014.04 - 2014.06 <br />
@@ -456,7 +457,7 @@
             <span class="private">private</span>
             <span class="case">case</span>
           </p>
-        </li><li data-name="compareprice">
+        </li><li class="work" data-name="compareprice">
           <h4>比價撿便宜</h4>
           <p>
             2014.03 - 2014.05 <br />
@@ -465,7 +466,7 @@
             <span class="java">Java</span>
             <span class="case">case</span>
           </p>
-        </li><li data-name="pdp-site">
+        </li><li class="work" data-name="pdp-site">
           <h4>Parallel and Distributed Programming Course Site</h4>
           <p>
             2014.02 - 2014.03 <br />
@@ -475,7 +476,7 @@
             <span class="angular">Angular.js</span>
             <span class="ntu">NTU</span>
           </p>
-        </li><li data-name="yamyday">
+        </li><li class="work" data-name="yamyday">
           <h4>Ya!MyDay</h4>
           <p>
             2013.11 <br />
@@ -485,7 +486,7 @@
             <span class="nodejs">Node.js</span>
             <span class="hackday">hackday</span>
           </p>
-        </li><li data-name="cardcial">
+        </li><li class="work" data-name="cardcial">
           <h4>Cardcial (former Himelight)</h4>
           <p>
             2013.06 - 2013.09 <br />
@@ -494,7 +495,7 @@
             <span class="startup">startup</span>
             <span class="private">private</span>
           </p>
-        </li><li data-name="sk-shootduck">
+        </li><li class="work" data-name="sk-shootduck">
           <h4>Shoot Duck - Sprite Kit Sample</h4>
           <p>
             2013.07 <br />
@@ -502,7 +503,7 @@
             <span class="ios">iOS</span>
             <span class="game">game</span>
           </p>
-        </li><li data-name="y-clothes-finder">
+        </li><li class="work" data-name="y-clothes-finder">
           <h4>Yahoo! Clothes Finder</h4>
           <p>
             2013.06 <br />
@@ -510,7 +511,7 @@
             <span class="yahoo">Yahoo</span>
             <span class="private">private</span>
           </p>
-        </li><li data-name="mapreduce-websocket">
+        </li><li class="work" data-name="mapreduce-websocket">
           <h4>MapReduce with WebSocket</h4>
           <p>
             2013.06 <br />
@@ -519,7 +520,7 @@
             <span class="ntu">NTU</span>
             <span class="nodejs">Node.js</span>
           </p>
-        </li><li data-name="jq-shootduck">
+        </li><li class="work" data-name="jq-shootduck">
           <h4>Shoot Duck - jQuery Sample</h4>
           <p>
             2013.03 <br />
@@ -527,7 +528,7 @@
             <span class="web">web</span>
             <span class="game">game</span>
           </p>
-        </li><li data-name="r-u-lucky-here">
+        </li><li class="work" data-name="r-u-lucky-here">
           <h4>Are You Lucky Here?</h4>
           <p>
             2012.12 <br />
@@ -535,7 +536,7 @@
             <span class="ios">iOS</span>
             <span class="ntu">NTU</span>
           </p>
-        </li><li data-name="hihidaruma">
+        </li><li class="work" data-name="hihidaruma">
           <h4>Hihidaruma</h4>
           <p>
             2012.11 <br />
@@ -544,7 +545,7 @@
             <span class="php">PHP</span>
             <span class="hackday">hackday</span>
           </p>
-        </li><li data-name="iphonedoll">
+        </li><li class="work" data-name="iphonedoll">
           <h4>Yahoo! iPhone Doll</h4>
           <p>
             2012.07 - 2012.08 <br />
@@ -552,7 +553,7 @@
             <span class="yahoo">Yahoo</span>
             <span class="private">private</span>
           </p>
-        </li><li data-name="compurchasy">
+        </li><li class="work" data-name="compurchasy">
           <h4>Compurchasy</h4>
           <p>
             2012.06 <br />
@@ -561,7 +562,7 @@
             <span class="ror">RoR</span>
             <span class="ntu">NTU</span>
           </p>
-        </li><li data-name="weblog-demo">
+        </li><li class="work" data-name="weblog-demo">
           <h4>Weblog Demo</h4>
           <p>
             2011.06 <br />
@@ -570,7 +571,7 @@
             <span class="java">Java</span>
             <span class="ntu">NTU</span>
           </p>
-        </li><li data-name="ct-cuda">
+        </li><li class="work" data-name="ct-cuda">
           <h4>CUDA Accelerated CT Scanning Image Reconstruction</h4>
           <p>
             2011.02 - 2011.06 <br />
@@ -578,7 +579,7 @@
             <span class="cuda">CUDA</span>
             <span class="private">private</span>
           </p>
-        </li><li data-name="physics-matlab">
+        </li><li class="work" data-name="physics-matlab">
           <h4>Physics Demo for Physic Courses</h4>
           <p>
             2009.06 <br />
