--- a/index.html
+++ b/index.html
@@ -249,6 +249,13 @@
           <span class="react">React.js</span>
           <span class="ios">iOS</span>
           <span class="android">Android</span>
+        </li><li class="work" data-name="seeds">
+          <h4>學籽（教室頁面）</h4>
+          <a href="https://seeds.com.tw/" target="_blank">https://seeds.com.tw/</a>
+          <span class="case">case</span>
+          <span class="support">support</span>
+          <span class="vue">Vue.js</span>
+          <span class="nodejs">Node.js</span>
         </li><li class="work" data-name="bacondaily">
           <h4>Bacon培根日薪</h4>
           <a href="https://app.bacondaily.com" target="_blank">https://app.bacondaily.com</a>
