--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
           Kotlin <span>★★★☆</span>
         </li><li data-name="golang">
           Golang <span>★★★</span>
+        </li><li data-name="vue">
+          Vue.js <span>★★★</span>
         </li><li data-name="kubernetes">
           Kubernetes <span>★★★</span>
         </li><li data-name="matlab">
@@ -126,8 +128,6 @@
           Adobe Illustrator <span>★★☆</span>
         </li><li data-name="docker">
           Docker <span>★★☆</span>
-        </li><li data-name="vue">
-          Vue.js <span>★★☆</span>
         </li><li data-name="sql">
           SQL <span>★☆</span>
         </li><li data-name="c">
@@ -238,7 +238,15 @@
           </p>
         </li>
       </ul><ul class="works work-generals">
-        <li class="work" data-name="aifian">
+        <li class="work" data-name="picsee">
+          <h4>PicSee</h4>
+          <a href="https://picsee.co" target="_blank">https://picsee.co</a>
+          <span class="private">private</span>
+          <span class="case">case</span>
+          <span class="support">support</span>
+          <span class="nodejs">Node.js</span>
+          <span class="vue">Vue.js</span>
+        </li><li class="work" data-name="aifian">
           <h4>aifian</h4>
           <a href="https://apps.apple.com/tw/app/aifian/id1447838651" target="_blank">https://apps.apple.com/tw/app/aifian/id1447838651</a>
           <a href="https://play.google.com/store/apps/details?id=com.adenovo.aifian" target="_blank">https://play.google.com/store/apps/details?id=com.adenovo.aifian</a>
