--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <li><a href="https://github.com/teaualune" target="_blank">Github</a></li>
         <li><a href="https://himelight.com/user/teaualune" target="_blank">Himelight</a></li>
         <li><a href="https://tw.linkedin.com/in/tai-lun-tseng-98b11224" target="_blank">LinkedIn</a></li>
+        <li><a href="https://teaualune.medium.com/" target="_blank">Medium</a></li>
       </ul>
     </section>
     <section id="experience">
@@ -258,7 +259,7 @@
           <span class="ios">iOS</span>
           <span class="android">Android</span>
         </li><li class="work" data-name="seeds">
-          <h4>學籽（教室頁面）</h4>
+          <h4>學籽</h4>
           <a href="https://seeds.com.tw/" target="_blank">https://seeds.com.tw/</a>
           <span class="case">case</span>
           <span class="support">support</span>
