add swift certs

--- a/index.html
+++ b/index.html
@@ -148,6 +148,13 @@
       </header>
       <ul>
         <li data-name="swift">
+          <a href="https://www.credly.com/badges/94f657c5-7e5e-4165-bf24-7def8712e7fc/public_url" target="_blank"><h4>App Development with Swift Associate</h4></a>
+          <p>2022.12 <br /><span class="ios">iOS</span></p>
+        </li>
+        <li data-name="swift">
+          <a href="https://www.credly.com/badges/14218e7c-38ad-4e89-9064-b377e084d748/public_url" target="_blank"><h4>App Development with Swift Certified User</h4></a>
+          <p>2022.12 <br /><span class="ios">iOS</span></p>
+        </li><li data-name="swift">
           <h4>Apple Train-the-Trainer (T3) Certificate</h4>
           <p>2018.11 <br /><span class="ios">iOS</span></p>
         </li><li data-name="java">
