change linkedin url

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
       <h3>Contact</h3>
       <ul>
         <li><a href="https://github.com/teaualune" target="_blank">Github</a></li>
-        <li><a href="https://himelight.com/user/teaualune" target="_blank">Himelight</a></li>
-        <li><a href="https://tw.linkedin.com/in/tai-lun-tseng-98b11224" target="_blank">LinkedIn</a></li>
+        <li><a href="https://www.linkedin.com/in/teaualune/" target="_blank">LinkedIn</a></li>
         <li><a href="https://teaualune.medium.com/" target="_blank">Medium</a></li>
       </ul>
     </section>
@@ -258,6 +257,13 @@
         <li class="work" data-name="healthyplate">
           <h4>Healthy Plate App</h4>
           <a href="https://healthyplateapp.com" target="_blank">https://healthyplateapp.com</a>
+          <span class="case">case</span>
+          <span class="support">support</span>
+          <span class="flutter">Flutter</span>
+        </li><li class="work" data-name="punchinout">
+          <h4>Punch-In-Out</h4>
+          <a href="https://apps.apple.com/tw/app/%E7%A5%9E%E5%A5%87%E6%89%93%E5%8D%A1/id6752010626" target="_blank">iOS</a>
+          <a href="https://play.google.com/store/apps/details?id=com.magicbizai.punchinout" target="_blank">Android</a>
           <span class="case">case</span>
           <span class="support">support</span>
           <span class="flutter">Flutter</span>
